[project]
name = ""
version = ""
description = ""
authors = [
    {name = "szafrixxx", email = "bartosz.szafranski1@gmail.com"},
]
dependencies = [
    "huggingface-hub>=0.21.4",
    "bs4>=0.0.2",
    "lxml>=5.1.0",
    "openai>=1.14.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
